Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5522

ofd_prolong_extent_locks()) ASSERTION( lock->l_flags & 0x0000000000000020ULL ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • Lustre 2.7.0
    • None
    • 3
    • 15379

      LBUG hit while running soak testing (IOR on CNs + message drop on router) on lola:

      <4>Lustre: 6834:0:(client.c:1926:ptlrpc_expire_one_request()) @@@ Request sent has timed out for slow reply: [sent 1408450946/real 1408450946]  req@ffff8802f1fc3000 x1476486607266588/t0(0) o105->soaked-OST0000@192.168.1.121@o2ib1:15/16 lens 360/224 e 0 to 1 dl 1408450953 ref 1 fl Rpc:X/0/ffffffff rc 0/-1
      <0>LustreError: 6767:0:(ofd_dev.c:1809:ofd_prolong_extent_locks()) ASSERTION( lock->l_flags & 0x0000000000000020ULL ) failed: 
      <0>LustreError: 6767:0:(ofd_dev.c:1809:ofd_prolong_extent_locks()) LBUG
      <0>Kernel panic - not syncing: LBUG in interrupt.
      <0>
      <4>Pid: 6767, comm: ll_ost_io02_005 Tainted: P        W  ---------------    2.6.32-431.23.3.el6_lustre.gc0c4f13.x86_64 #1
      <4>Call Trace:
      <4> [<ffffffff81528dbc>] ? panic+0xa7/0x16f
      <4> [<ffffffffa1089edd>] ? lbug_with_loc+0x8d/0xb0 [libcfs]
      <4> [<ffffffffa1a0f7ac>] ? ofd_prolong_extent_locks+0x35c/0x390 [ofd]
      <4> [<ffffffffa1a0fce9>] ? ofd_rw_hpreq_check+0xe9/0x350 [ofd]
      <4> [<ffffffffa1444345>] ? req_capsule_client_get+0x15/0x20 [ptlrpc]
      <4> [<ffffffffa1a0fb87>] ? ofd_hp_brw+0xd7/0x150 [ofd]
      <4> [<ffffffffa147d2a2>] ? tgt_hpreq_handler+0xf2/0x2f0 [ptlrpc]
      <4> [<ffffffffa1426cf6>] ? ptlrpc_server_handle_req_in+0x7c6/0xcd0 [ptlrpc]
      <4> [<ffffffffa142ddfc>] ? ptlrpc_main+0x9ec/0x1990 [ptlrpc]
      <4> [<ffffffff810096f0>] ? __switch_to+0xd0/0x320
      <4> [<ffffffff810623a9>] ? find_busiest_queue+0x69/0x150
      <4> [<ffffffff815294ce>] ? thread_return+0x4e/0x760
      <4> [<ffffffffa142d410>] ? ptlrpc_main+0x0/0x1990 [ptlrpc]
      <4> [<ffffffff8109abf6>] ? kthread+0x96/0xa0
      <4> [<ffffffff8100c20a>] ? child_rip+0xa/0x20
      <4> [<ffffffff8109ab60>] ? kthread+0x0/0xa0
      <4> [<ffffffff8100c200>] ? child_rip+0x0/0x20
      

            johann Johann Lombardi (Inactive)
            johann Johann Lombardi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: