LU-5522 ldlm: remove expired lock from per-export list

Expired locks processed by the ldlm_elt thread might still be
referenced in the per-export BL AST list. Most of the time, it
has not impact except when a request for this export is still
being processed for this export and might scan the per-export
BL AST list.

Signed-off-by: Johann Lombardi <johann.lombardi@intel.com>
Change-Id: I23745770983507ffd986de9ba056a03b11199a78
Reviewed-on: http://review.whamcloud.com/11634
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>